@@ -55,7 +55,8 @@ public:
   // @brief Convert box to widget
   // @return Widget
   // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-  explicit operator widget () const
+  widget
+  as_widget () const
   {
     return widget (_impl <widget_impl_base> ());
   }
