@@ -50,7 +50,8 @@ public:
   // @brief Convert button to widget
   // @return Widget
   // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-  explicit operator widget () const
+  widget
+  as_widget () const
   {
     return widget (_impl <widget_impl_base> ());
   }
