@@ -9,6 +9,7 @@ Mobius Forensic Toolkit 2.19
 	* app-chromium: Changed file_cookies module to handle Cookies files v17
 	* app-chromium: Added new class vfs_processor_impl 
 	* app-chromium: Removed class evidence_loader_impl
+	* app-emule: Removed unnecessary [[fallthrough]] attributes from ctag module
 	* libmobius_core: Added new method decoder::inifile::get_value (with default value)
 	* libmobius_core: Added new method decoder::inifile::get_values
 	* libmobius_core: Added new method decoder::inifile::set_value_char
@@ -16,6 +17,11 @@ Mobius Forensic Toolkit 2.19
 	* libmobius_core: Added necessary include to the io::walker component
 	* libmobius_core: Added necessary include to the mediator component
 	* libmobius_core: Removed inheritance from std::iterator in the pod::map component
+	* libmobius_core: Removed unnecessary [[fallthrough]] attributes from vfs::tsk::fs_file module
+	* libmobius_core: Changed ui::box::operator widget to as_widget()
+	* libmobius_core: Changed ui::button::operator widget to as_widget()
+	* libmobius_core: Changed ui::icon::operator widget to as_widget()
+	* libmobius_core: Changed ui::label::operator widget to as_widget()
 	* libmobius_framework: Added new class case_profile
 	* libmobius_framework: Added new function list_case_profiles
 	* libmobius_framework: Added new class vfs_processor_impl_base
@@ -28,6 +34,7 @@ Mobius Forensic Toolkit 2.19
 	* libmobius_python: Changed framework.ant.run method to release GIL when calling C++
 	* libmobius_python: Added new class framework.ant.vfs_processor
 	* libmobius_python: Changed pymobius.cpp to use PyFrame_GetCode 
+	* tools.hive_info: Changed to use reference in loop
 
 Mobius Forensic Toolkit 2.18
 	* app-chromium: Added support for History schema version up to 70
